--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 23 22:16:05 MSK 2017
-sdk.dir=C\:\\Users\\Margarita\\AppData\\Local\\Android\\Sdk
+#Fri Nov 24 18:19:29 MSK 2017
+sdk.dir=/Users/artemczenolegovic/Library/Android/sdk
