--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Teacher"></activity>
+        <activity android:name=".Teacher" />
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".Adventure"></activity>
     </application>
 
 </manifest>
