--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 25 22:32:17 MSK 2017
-sdk.dir=C\:\\Users\\Margarita\\AppData\\Local\\Android\\Sdk
+#Sun Nov 26 15:44:16 MSK 2017
+sdk.dir=/Users/artemczenolegovic/Library/Android/sdk
