--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         </activity>
         <activity android:name=".Teacher" />
         <activity android:name=".Main2Activity" />
-        <activity android:name=".Adventure"></activity>
-        <activity android:name=".Battle"></activity>
+        <activity android:name=".Adventure" />
+        <activity android:name=".Battle" />
+        <activity android:name=".Settings"></activity>
     </application>
 
 </manifest>
