--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 27 17:36:56 MSK 2017
+#Thu Nov 30 22:31:54 MSK 2017
+>>>>>>>=11021314bc2a0616fec5a0340321b674c224cfe7
 sdk.dir=/Users/artemczenolegovic/Library/Android/sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
