--- a/local.properties
+++ b/local.properties
@@ -7,9 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Mon Nov 27 16:52:03 MSK 2017
-=======
-#Sat Nov 25 22:32:17 MSK 2017
->>>>>>> parent of 4bf28b5... Все хорошо
-sdk.dir=C\:\\Users\\Margarita\\AppData\\Local\\Android\\Sdk
+#Fri Dec 01 01:39:05 MSK 2017
+>>>>>>>=parent of 4bf28b5... \u0412\u0441\u0435 \u0445\u043E\u0440\u043E\u0448\u043E
+sdk.dir=/Users/spectr/Library/Android/sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
