--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--suppress ALL -->
+<?xml version="1.0" encoding="utf-8"?><!-- suppress ALL -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ton.hack.abstracktika">
 
@@ -21,7 +20,8 @@
         <activity android:name=".Main2Activity" />
         <activity android:name=".Adventure" />
         <activity android:name=".Battle" />
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".hero"></activity>
     </application>
 
 </manifest>
