--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 01 11:46:50 MSK 2017
+#Fri Dec 01 13:46:14 MSK 2017
 >>>>>>>=6e05e201bad07f0199c88c6840c5a2d8ae1ebdf8
-sdk.dir=/Users/artemczenolegovic/Library/Android/sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\Margarita\\AppData\\Local\\Android\\Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
