--- a/local.properties
+++ b/local.properties
@@ -7,12 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
 #Fri Dec 01 16:35:38 MSK 2017
-=======
-#Fri Dec 01 10:41:16 MSK 2017
->>>>>>> parent of bde7faf... ФОООООООООООООООООООООООН
 >>>>>>>=6e05e201bad07f0199c88c6840c5a2d8ae1ebdf8
-sdk.dir=/Users/artemczenolegovic/Library/Android/sdk
-=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\Margarita\\AppData\\Local\\Android\\Sdk
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
